--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "esbuild": "^0.20.1",
     "tailwindcss": "^3.4.1"
